# video-scrapper

./: LICENSE  README.md  shell.nix  video-scrapper.cabal
exe/: FileParser.hs  Main.hs
retailers/: kabum  pichau  terabyteshop
src/: Requisitioner.hs  Scrapper.hs  Types.hs
